@@ -1,3 +1,5 @@
 11/03/2024	napolitano	modificato index.php (link file css)
 11/03/2024    	rizzello2400	inizio cambiamento menu con quello di michele
 13/03/2024      lafrance2400    modifiche in registrazione.php e creazione registrazione.css (ancora da completare)
+16/03/2024	rizzello2400	alcuni fix in registrazione.php (percorso immagine sbagliato, logica sul php riguardo al $loggato)
+16/03/2024	rizzello2400	diverse modifiche al php in prenotazioni_admin.php
